[gd_scene load_steps=10 format=2]

[ext_resource path="res://system/theme.tres" type="Theme" id=1]
[ext_resource path="res://system/code/exit_on_esc.gd" type="Script" id=2]
[ext_resource path="res://system/system.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/maps/aarmeda/terrain.tscn" type="PackedScene" id=4]
[ext_resource path="res://system/corners.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/scenes/logo.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/scenes/welcome.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/code/menu.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="intro" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="system" parent="." instance=ExtResource( 3 )]
editor/display_folded = true

[node name="SUN" parent="system" index="0"]
light_cull_mask = -1

[node name="aarmeda" parent="." instance=ExtResource( 4 )]

[node name="main_camera" type="Camera" parent="."]
transform = Transform( -0.0851213, 0.40383, 0.910865, 0, 0.914183, -0.405301, -0.996371, -0.0344998, -0.0778165, 1817.39, 59.246, -1375.91 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 75.0
size = 1.0
near = 0.05
far = 2048.0

[node name="corners" parent="." instance=ExtResource( 5 )]

[node name="center" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="logo" parent="center" instance=ExtResource( 6 )]
margin_left = -153.0
margin_top = -153.0
margin_right = 152.0
margin_bottom = -7.0
size_flags_vertical = 4

[node name="bottom" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="menu" parent="bottom" instance=ExtResource( 7 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -152.0
margin_bottom = -30.0
script = ExtResource( 8 )

[node name="header" parent="bottom/menu" index="1"]
text = "Main menu"

[node name="paragraph" parent="bottom/menu" index="2"]
margin_bottom = -46.0
text = "Free play."

[node name="the_menu" type="HBoxContainer" parent="bottom/menu"]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -58.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 6
alignment = 1

[node name="start" type="Button" parent="bottom/menu/the_menu"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 27.0
margin_right = 75.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1

[node name="config" type="Button" parent="bottom/menu/the_menu"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 81.0
margin_right = 129.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Config"
flat = false
align = 1

[node name="exit" type="Button" parent="bottom/menu/the_menu"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 135.0
margin_right = 183.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1

[node name="credits" parent="bottom/menu" instance=ExtResource( 7 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 125.0
margin_top = -196.0
margin_right = 335.0
margin_bottom = 0.0

[node name="welcome-anim" parent="bottom/menu/credits" index="0"]
anims/fade-out = SubResource( 1 )

[node name="header" parent="bottom/menu/credits" index="1"]
text = "Credits"

[node name="paragraph" parent="bottom/menu/credits" index="2"]
text = "Game is free and open source.
Made by P1X

~ Shaders ~
P1X/Krzysztof Jankowski

~ Models ~
P1X/Mau Ryc

~ Fonts ~
Eeve Somepx"

[node name="welcome" parent="bottom/menu" instance=ExtResource( 7 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -335.0
margin_top = -122.0
margin_right = -125.0
margin_bottom = 0.0

[node name="header" parent="bottom/menu/welcome" index="1"]
text = "Welcome"

[node name="paragraph" parent="bottom/menu/welcome" index="2"]
text = "This is an alpha release. Nothing works and evrything is broken. But it is still fun.

It runs on:
i3-7100, 8GB RAM, M.2 SSD, nVidia 1050 2GB"

[node name="config" parent="bottom/menu" instance=ExtResource( 7 )]
visible = false

[node name="header" parent="bottom/menu/config" index="1"]
text = "Configuration"

[node name="paragraph" parent="bottom/menu/config" index="2"]
text = "Nothing yet."

[node name="ok" type="Button" parent="bottom/menu/config"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -68.0
margin_right = 24.0
margin_bottom = -20.0
rect_min_size = Vector2( 48, 48 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Close"
flat = false
align = 1

[connection signal="pressed" from="bottom/menu/the_menu/start" to="bottom/menu" method="_on_start_pressed"]
[connection signal="pressed" from="bottom/menu/the_menu/config" to="bottom/menu" method="_on_config_pressed"]
[connection signal="pressed" from="bottom/menu/the_menu/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="bottom/menu/config/ok" to="bottom/menu" method="_on_ok_pressed"]

[editable path="system"]

[editable path="bottom/menu"]

[editable path="bottom/menu/credits"]

[editable path="bottom/menu/welcome"]

[editable path="bottom/menu/config"]
